wrote 2nd css code

--- a/my site.html
+++ b/my site.html
@@ -24,7 +24,7 @@
          <div class="profile">
             <img src="images/bukola.png" alt="cloud">
             <h2>Hello</h2>
-            <p class="intro">Iam a Frontend Developer. I am the founder of Bfk fashions.I design fabric and websites </p>
+            <p class="intro">Iam a Frontend Developer. I am the founder of Bfk fashions.I design fabrics👚 and websites💻 </p>
         </div>
 
         <hr>
